--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-paper": "^4.4.0",
-    "react-native-vector-icons": "^7.1.0"
+    "react-native-vector-icons": "^7.1.0",
+    "react-native-webview": "^10.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
